# SV-motor

./: .gitignore  ESTRUCTURA_PROPUESTA_REPO.md  LOTE_DE_ENTREGA_Y_VERIFICACION.md  MANIFIESTO_LOTE_CIERRE_FASE_0_Y_PROTOCOLO_1.md  MANIFIESTO_LOTE_CORRECCION_EXACTA_1.md  MANIFIESTO_LOTE_CORRECCION_EXACTA_2.md  MANIFIESTO_LOTE_CUSTODIA_ESTRUCTURAL_1.md  MANIFIESTO_LOTE_DOMINIO_DEV_1.md  README.md  README_LOTE_AUDITORIA_SV_MOTOR.md  README_LOTE_EJECUCION_AUDITORIA_1.md  pyproject.toml
.github/workflows/: ci.yml
docs/agentes/: 00_subordinacion_del_motor_a_agentes_especializados.md  01_arranque_de_agentes_especializados_y_realimentacion_experta.md  README.md
docs/archivo/: README.md
docs/arquitectura/: 00_arquitectura_minima_local_y_auxiliar_online.md  01_relacion_con_lenguaje_sv.md  02_relacion_con_nlp_y_banco_de_idiomas.md  03_dominio_dev_y_evaluador_algebraico.md  04_custodia_estructural_en_el_flujo_principal.md  05_planos_de_uso_de_la_ia_en_el_motor.md  06_capa_visual_especializada_y_sincronizacion_poligonal.md  07_transduccion_determinista_de_intencion_a_programa_svp.md  08_capa_python_de_verificacion.md  09_hito5_arquitectura_multiestrato.md  10_declaracion_de_actores_y_modelos_del_frente_ia.md  11_lecciones_de_fallos_documentados_y_garantias_del_sv.md  (+2 more)
docs/calidad/: README.md  (+40 more)
laboratorio/: README.md
scripts/: run_local_checks.sh
tests/: test_algebra.py  test_cli.py  test_custodia_estructural.py  test_dev_domain.py  test_extractors.py  test_interfaz_correcciones.py  test_protocol_ft_sv_ia.py  test_public_api.py  test_validator.py  test_verification.py
(+85 files in other folders)
