[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-motor"
version = "0.1.0"
description = "Núcleo local mínimo y auditable del frente motor del Sistema Vectorial SV"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Juan Antonio Lloret Egea"}
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
