[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-motor"
version = "0.1.7"
description = "Núcleo local mínimo y auditable del frente motor del Sistema Vectorial SV"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Juan Antonio Lloret Egea"}
]
dependencies = []

[project.scripts]
sv-nlp = "sv_motor.cli:main"

[project.optional-dependencies]
bridge = [
  "httpx>=0.27",
  "requests>=2.31",
  "anthropic>=0.52",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["sv_motor.algebra"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
